# irtree

./: README.md  TECHNICAL.md  TODO.md  pyproject.toml
python/irtree/: __init__.py  _descriptor.py  _logger.py  _utils.py  node.py  query.py
python/sconfig/: __init__.py  _descriptor.py  _logger.py  _profiler.py  _utils.py  config.py  query.py
tests/functional/: test_custom.py  test_read.py
tests/resources/: foo.json  test_read.json
tests/unit/: test_config.py
